# galed

./: CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RFC.md
.galed/requirements/: REQ-001.gal
schema/: requirement.json
src/: main.rs
