[package]
name = "galed"
version = "0.1.0"
edition = "2021"
description = "Galed — a requirements definition language and traceability engine for human-AI hybrid authorship in regulated systems."
license = "MIT"
repository = "https://github.com/aetucker91/galed"
homepage = "https://github.com/aetucker91/galed"
keywords = ["requirements", "traceability", "compliance", "audit", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "galed"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
jsonschema = "0.18"
petgraph = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
colored = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
